Image alignment fix

--- a/_sass/app/_four-oh-four.scss
+++ b/_sass/app/_four-oh-four.scss
@@ -28,18 +28,20 @@ main#four-oh-four {
 			color: 			$white;
 			
 			picture.error-image {
+
+				display: block;
 				grid-area: 			logo;
 				-ms-grid-column: 	1;
-				
-				justify-self:		center;
-				align-self: 		flex-start;
-				
+								
 				max-width: 			120px;
 				max-height: 		120px;
-				
-				margin: 			60px 0 0;
+									
+				margin-top: 60px;
+				margin-left: auto;
+				margin-right: auto;
 										
 				img, source {
+					
 					width: 100%;
 					max-width: 120px;
 					max-height: 120px;
